New Rush schedule

--- a/22/StartupRush.html
+++ b/22/StartupRush.html
@@ -179,7 +179,7 @@
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 11h30 <div style="float: right"><i class="fa fa-map-marker"></i>Central Hall</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item5" class="collapsed">
-                               Jobbox
+                               Jobbox.io
                             <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
@@ -340,14 +340,23 @@
                       </div>
                       <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:50px; left: 70px;">
-                          <img src="assets/img/speaker/coffe.png" class="img-responsive img-circle" alt="speaker-2" />
+                          <img src="assets/img/speaker/beer.png" class="img-responsive img-circle" alt="speaker-2" />
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 20h00 <div style="float: right"><i class="fa fa-map-marker"></i>Central Hall</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item15" class="collapsed">
-                               Coffee Break + Networking
+                               Beer break with Mobizy/Tekever
+                               <div class="pull-right fa fa-angle-up"></div>
+                              <div class="pull-right fa fa-angle-down"></div>
                             </a>
+                          </div>
+                        </div>
+                        <div id="item15" class="panel-collapse collapse">
+                          <div class="panel-body">
+                            <article>
+                              <p>details soon...</p>
+                            </article>
                           </div>
                         </div>
                       </div>
@@ -419,13 +428,13 @@
                       </div>
                       <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:50px; left: 70px;">
-                          <img src="assets/img/sponsor/mobizy.webp" class="img-responsive img-circle" alt="speaker-2" />
+                          <img src="assets/img/sponsor/muzzley.png" class="img-responsive img-circle" alt="speaker-2" />
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 9h50 <div style="float: right"><i class="fa fa-map-marker"></i>Central Hall</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item19" class="collapsed">
-                               Mobizy
+                               Muzzley
                                <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
