--- a/22/schedule.html
+++ b/22/schedule.html
@@ -655,7 +655,7 @@
                           <li style="width:160px"><a href="http://www.gatewit.com/pt/" target="_blank"><img src="assets/img/sponsor/gatewit.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.accenture.com/pt-en/Pages/index.aspx" target="_blank"><img src="assets/img/sponsor/accenture.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.kpmg.com/PT/PT/Paginas/default.aspx" target="_blank"><img src="assets/img/sponsor/KPMG.png" width="160px" alt="sponsor-1" /></a></li>
-                          <li style="width:160px"><a href="http://startuplisboa.com/" target="_blank"><img src="assets/img/sponsor/startupLx.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px; margin-left: -10px; margin-right: 10px;"><a href="https://www.muzzley.com/" target="_blank"><img src="assets/img/sponsor/muzzley-comp.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloitte.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.itpeople.pt/" target="_blank"><img src="assets/img/sponsor/itpeople.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.pwc.pt/" target="_blank"><img src="assets/img/sponsor/PwC.png" width="160px" alt="sponsor-1" /></a></li>
@@ -1325,7 +1325,7 @@
                           <li style="width:160px"><a href="http://www.gatewit.com/pt/" target="_blank"><img src="assets/img/sponsor/gatewit.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.accenture.com/pt-en/Pages/index.aspx" target="_blank"><img src="assets/img/sponsor/accenture.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.kpmg.com/PT/PT/Paginas/default.aspx" target="_blank"><img src="assets/img/sponsor/KPMG.png" width="160px" alt="sponsor-1" /></a></li>
-                          <li style="width:160px"><a href="http://startuplisboa.com/" target="_blank"><img src="assets/img/sponsor/startupLx.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="https://www.uniplaces.com/" target="_blank"><img src="assets/img/speaker/uniplaces.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloite.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.itpeople.pt/" target="_blank"><img src="assets/img/sponsor/itpeople.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.pwc.pt/" target="_blank"><img src="assets/img/sponsor/PwC.png" width="160px" alt="sponsor-1" /></a></li>
@@ -2038,7 +2038,7 @@
                           <li style="width:160px"><a href="http://www.ericsson.com/pt" target="_blank"><img src="assets/img/sponsor/Ericsson.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.bnpparibas.pt/en/" target="_blank"><img src="assets/img/sponsor/bnpparibas.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.kpmg.com/PT/PT/Paginas/default.aspx" target="_blank"><img src="assets/img/sponsor/KPMG.png" width="160px" alt="sponsor-1" /></a></li>
-                          <li style="width:160px"><a href="http://startuplisboa.com/" target="_blank"><img src="assets/img/sponsor/startupLx.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="http://www.talkdesk.com/" target="_blank"><img src="assets/img/sponsor/talkdesk-logo.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloite.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="www.blip.pt/" target="_blank"><img src="assets/img/sponsor/blip.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.sap.com/portugal/" target="_blank"><img src="assets/img/sponsor/SAP.png" width="160px" alt="sponsor-1" /></a></li>
@@ -2636,7 +2636,7 @@
                           <li style="width:160px"><a href="http://www.ericsson.com/pt" target="_blank"><img src="assets/img/sponsor/Ericsson.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.bnpparibas.pt/en/" target="_blank"><img src="assets/img/sponsor/bnpparibas.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.icreateconsulting.com/" target="_blank"><img src="assets/img/sponsor/icreate.png" width="160px" alt="sponsor-1" /></a></li>
-                          <li style="width:160px"><a href="http://startuplisboa.com/" target="_blank"><img src="assets/img/sponsor/startupLx.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="http://www.lunacloud.com/pt/" target="_blank"><img src="assets/img/speaker/luna.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloite.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="www.blip.pt/" target="_blank"><img src="assets/img/sponsor/blip.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.sap.com/portugal/" target="_blank"><img src="assets/img/sponsor/SAP.png" width="160px" alt="sponsor-1" /></a></li>
