New silver Partner

--- a/22/partners.html
+++ b/22/partners.html
@@ -119,6 +119,7 @@
             <li><a href="http://www.edisoft.pt//" target="_blank"><img src="assets/img/sponsor/Edisoft.png" alt="sponsor-1" /></a></li>
             <li><a href="http://www.syone.com/index.php/pt/" target="_blank"><img src="assets/img/sponsor/Syone.png" alt="sponsor-1" /></a></li>
             <li><a href="http://www.itsector.pt/pt.aspx" target="_blank"><img src="assets/img/sponsor/ITsector.png" alt="sponsor-1" /></a></li>
+            <li><a href="http://www.mindsource.pt/" target="_blank"><img src="assets/img/sponsor/MindSource.png" alt="sponsor-1" /></a></li>
           </ul>
         </div>
         <div class="sub-title">Partners</div>
