--- a/22/StartupRush.html
+++ b/22/StartupRush.html
@@ -83,7 +83,7 @@
       <div class="container">
         <h3>Schedule</h3>
         <br />
-        <section class="nav-tabs-default hidden-xs">
+        <section class="nav-tabs-default">
           <!-- Parent Nav Tabs -->
           <ul class="nav nav-tabs">
             <li class="active"><a href="#DayOne" data-toggle="tab">
@@ -179,7 +179,7 @@
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 11h30 <div style="float: right"><i class="fa fa-map-marker"></i>Central Hall</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item5" class="collapsed">
-                               Jobbox.io
+                               JOBBOX.io
                             <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
