--- a/22/schedule.html
+++ b/22/schedule.html
@@ -60,7 +60,7 @@
         <div class="sub-title">For the schedule of 27th and 28th, check the <a href="StartupRush.html"> Startup Rush</a> page</div>
         <br />
         <br />
-        <section class="nav-tabs-default hidden-xs">
+        <section class="nav-tabs-default">
           <!-- Parent Nav Tabs -->
           <ul class="nav nav-tabs">
             <li class="active"><a href="#DayOne" data-toggle="tab">
@@ -655,7 +655,7 @@
                           <li style="width:160px"><a href="http://www.gatewit.com/pt/" target="_blank"><img src="assets/img/sponsor/gatewit.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.accenture.com/pt-en/Pages/index.aspx" target="_blank"><img src="assets/img/sponsor/accenture.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.kpmg.com/PT/PT/Paginas/default.aspx" target="_blank"><img src="assets/img/sponsor/KPMG.png" width="160px" alt="sponsor-1" /></a></li>
-                          <li style="width:160px; margin-left: -10px; margin-right: 10px;"><a href="https://www.muzzley.com/" target="_blank"><img src="assets/img/sponsor/muzzley-comp.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px; margin-left: -10px; margin-right: 10px;"><a href="https://www.jobbox.io/" target="_blank"><img src="assets/img/speaker/jobbox.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloitte.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.itpeople.pt/" target="_blank"><img src="assets/img/sponsor/itpeople.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.pwc.pt/" target="_blank"><img src="assets/img/sponsor/PwC.png" width="160px" alt="sponsor-1" /></a></li>
