Updated stats numbers

--- a/22/index.html
+++ b/22/index.html
@@ -128,14 +128,14 @@
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="counter animated hiding" data-animation="fadeInDown" data-delay="500">
-              <div class="stat"><span class="value" data-from="0" data-to="10">30</span>+</div>
+              <div class="stat"><span class="value" data-from="0" data-to="10">32</span>+</div>
               <div class="stat-info">Presentations</div>
             </div>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="counter animated hiding" data-animation="fadeInDown" data-delay="1000">
-              <div class="stat"><span class="value" data-from="0" data-to="10">10</span>+</div>
-              <div class="stat-info">Workshops/hackatons</div>
+              <div class="stat"><span class="value" data-from="0" data-to="11">11</span></div>
+              <div class="stat-info">Workshops + hackaton</div>
             </div>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
