Corrected last update

--- a/22/index.html
+++ b/22/index.html
@@ -128,7 +128,7 @@
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="counter animated hiding" data-animation="fadeInDown" data-delay="500">
-              <div class="stat"><span class="value" data-from="0" data-to="10">32</span>+</div>
+              <div class="stat"><span class="value" data-from="0" data-to="32">32</span></div>
               <div class="stat-info">Presentations</div>
             </div>
           </div>
