--- a/22/StartupRush.html
+++ b/22/StartupRush.html
@@ -606,6 +606,10 @@
           <ul class="list-inline">
             <li><a href="http://www.faber-ventures.com/" target="_blank"><img src="assets/img/sponsor/faber.png" alt="sponsor-1" /></a></li>
             <li><a href="http://sapo.miniclip.com/games/pt/" target="_blank"><img src="assets/img/sponsor/Miniclip.png" alt="sponsor-1" /></a></li>
+            <li><a href="https://www.jobbox.io/" target="_blank"><img src="assets/img/speaker/jobbox.png" alt="sponsor-1" /></a></li>
+            <li><a href="http://www.lunacloud.com/pt/" target="_blank"><img src="assets/img/speaker/luna.png" alt="sponsor-1" /></a></li>
+            <li><a href="http://www.talkdesk.com/" target="_blank"><img src="assets/img/sponsor/talkdesk-logo.png" alt="sponsor-1" /></a></li>
+            <li><a href="https://www.uniplaces.com/" target="_blank"><img src="assets/img/speaker/uniplaces.png" alt="sponsor-1" /></a></li>
           </ul>
         </div> 
       </div>
