--- a/22/partners.html
+++ b/22/partners.html
@@ -136,6 +136,10 @@
             <li><a href="http://www.goyouthconf.com/" target="_blank"><img src="assets/img/sponsor/goYouth.jpg" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
             <li><a href="http://www.alfredo-jesus.com/home.php" target="_blank"><img src="assets/img/sponsor/alfredo.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
             <li><a href="http://www.ordemengenheiros.pt/pt/a-ordem/sul/" target="_blank"><img src="assets/img/sponsor/OE.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
+            <li><a href="https://www.jobbox.io/" target="_blank"><img src="assets/img/speaker/jobbox.png" alt="sponsor-1" /></a></li>
+            <li><a href="http://www.lunacloud.com/pt/" target="_blank"><img src="assets/img/speaker/luna.png" alt="sponsor-1"/></a></li>
+            <li><a href="http://www.talkdesk.com/" target="_blank"><img src="assets/img/sponsor/talkdesk-logo.png" alt="sponsor-1"  /></a></li>
+            <li><a href="https://www.uniplaces.com/" target="_blank"><img src="assets/img/speaker/uniplaces.png" alt="sponsor-1" /></a></li>
           </ul>
         </div>
         <div class="sub-title">Media Partners</div>
