--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="description">
           SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.
           <br>
-          <a class="transparent-button" href="22/index.html" style="padding: 1em 1.5em 1em 1.5em;">Go to SINFO 22</a>
+          <a class="transparent-button" href="/22" style="padding: 1em 1.5em 1em 1.5em;">Go to SINFO 22</a>
           <br>
           <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="social-icon fa fa-facebook"></i></a>
           <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="social-icon fa fa-twitter"></i></a>
