--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a class="logoPlaceholder" href="#" title="SINFO"><img src="img/logo.png"></a>
           </li>
           <li><a href="#news">News</a></li>
-          <li><a href="22/index.html">SINFO 22</a></li>
+          <li><a href="/22">SINFO 22</a></li>
           <li><a href="#speakers">Speakers</a></li>
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
