added info for recruiting

--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
             <a class="logoPlaceholder" href="#" title="SINFO"><img src="img/logo.png"></a>
           </li>
           <li><a href="#news">News</a></li>
-          <li><a href="22/index.html">SINFO 22</a></li>
+          <!--<li><a href="22/index.html">SINFO 22</a></li>-->
           <li><a href="#speakers">Speakers</a></li>
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
           <li><a href="#meetus">Meet us!</a></li>
+          <li><a href="#joinus">Join us!</a></li>
           <li><a href="code.html">Code of Conduct</a></li>
         </ul>
       </nav>
@@ -81,11 +82,12 @@
 
         <ul class="menu vertical flat black hide-all" id="topbar_menu">
           <li><a href="#news">News</a></li>
-          <li><a href="22/index.html">SINFO 22</a></li>
+          <!--<li><a href="22/index.html">SINFO 22</a></li>-->
           <li><a href="#speakers">Speakers</a></li>
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
           <li><a href="#meetus">Meet us!</a></li>
+          <li><a href="#joinus">Join us!</a></li>
           <li><a href="code.html">Code of Conduct</a></li>
         </ul>
       </nav>
@@ -97,7 +99,7 @@
         <div class="description">
           SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.
           <br>
-          <a class="transparent-button" href="22/index.html" style="padding: 1em 1.5em 1em 1.5em;">Go to SINFO 22</a>
+          <a class="transparent-button" href="#joinus" style="padding: 1em 1.5em 1em 1.5em;">We are recruiting!!</a>
           <br>
           <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="social-icon fa fa-facebook"></i></a>
           <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="social-icon fa fa-twitter"></i></a>
@@ -155,11 +157,9 @@
       </div>
       <div class="column-group gutters">
         <div class="all-60 medium-50 small-100 tiny-100 justify-text">
-          <span class="note">February 1st, 2015</span>
-          <h3>New speaker announced!</h3>
-          <p>
-            Alberto López. Alberto works as Developer Evangelist at Braintree_Dev. A Paypal Company, he will be present at our Startup Rush event, day 28.
-          </p>
+          <span class="note">March 16, 2015</span>
+          <h3>We are recruiting!!</h3>
+          <p>If you like technology, have initiative, creativity, team spirit and you would like to organize one of the best events in Portugal, this is your chance!!<span><a href="#joinus"> learn how!</a></span></p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
           <!-- Begin MailChimp Signup Form -->
@@ -209,7 +209,7 @@
     <div class="ink-grid text-section previous-speakers">
       <div class="column-group gutters">
         <div class="all-100">
-          <h2>Confirmed Speakers for SINFO 22  <span style="position: relative; top: -7px;" ><h10><a style="font-size: 10px;">visit website</a></h10></span></h2>
+          <h2>SINFO 22 Speakers<!--<span style="position: relative; top: -7px;" ><h10><a style="font-size: 10px;">visit website</a></h10></span>--></h2>
         </div>
       </div>
       <div class="column-group gutters">
@@ -544,8 +544,6 @@
         <div class="all-5 hide-medium hide-small hide-tiny">
           <!-- spacer -->
         </div>
-        
-        
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Diogo Lopes</h6>
           <img src="img/team/diogo_lopes.jpg" onmouseover="this.src='img/team/diogo_lopes.jpg'" onmouseout="this.src='img/team/diogo_lopes.jpg'" alt="">
@@ -629,6 +627,25 @@
           <!-- spacer -->
         </div>
 
+      </div>
+    </div>
+    <div class="ink-grid text-section" id="joinus">
+      <div class="column-group gutters">
+        <div class="all-10 medium-10 small-10 tiny-10 justify-text"></div>
+        <div class="all-80 medium-80 small-80 tiny-80 justify-text">
+          <h3>Join Us!</h3>
+          <p>If you like technology, have initiative, creativity, team spirit and you would like to organize one of the best events in Portugal, this is your chance!!</p>
+          <p>Send us an email to <a href="mailto:geral@sinfo.org">geral@sinfo.org</a> with:</p>
+          <ul>
+            <li>Name, email and phone number;</li>
+            <li>University, course and year attending;</li>
+            <li>Student number [If IST student];</li>
+            <li>And tell us why would you like to join.</li>
+          </ul>
+          <p>As soon as we analize it, we'll send you an email with more details and the next step!</p>
+          <p>Good luck!</p>
+        </div>
+        <div class="all-10 medium-10 small-10 tiny-10 justify-text"></div>
       </div>
     </div>
 
