added right rh email

--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
         <div class="all-80 medium-80 small-80 tiny-80 justify-text">
           <h3>Join Us!</h3>
           <p>If you like technology, have initiative, creativity, team spirit and you would like to organize one of the best events in Portugal, this is your chance!!</p>
-          <p>Send us an email to <a href="mailto:geral@sinfo.org">geral@sinfo.org</a> with the subject "Recrutamento SINFO" and the following details: </p>
+          <p>Send us an email to <a href="mailto:rh@sinfo.org">rh@sinfo.org</a> with the subject "Recrutamento SINFO" and the following details: </p>
           <ul>
             <li>Name, email and phone number;</li>
             <li>University, course and year attending;</li>
