--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
             <a class="logoPlaceholder" href="#" title="SINFO"><img src="img/logo.png"></a>
           </li>
           <li><a href="#news">News</a></li>
-
-          <!--<li><a href="/22">SINFO 22</a></li>-->
           <li><a href="#speakers">Speakers</a></li>
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
@@ -83,7 +81,6 @@
 
         <ul class="menu vertical flat black hide-all" id="topbar_menu">
           <li><a href="#news">News</a></li>
-          <!--<li><a href="/22">SINFO 22</a></li>-->
           <li><a href="#speakers">Speakers</a></li>
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
@@ -97,16 +94,24 @@
     <div class="header" id="header">
       <div class="opacidade">
         <h1><a href="#" title=""><img src="img/logo.png"></a></h1>
-        <div class="description">
+        <div class="description column-group">
           SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.
-          <br>
-          <a class="transparent-button" href="#joinus" style="padding: 1em 1.5em 1em 1.5em;">We are recruiting!!</a>
-          <br>
-          <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="social-icon fa fa-facebook"></i></a>
-          <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="social-icon fa fa-twitter"></i></a>
-          <a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="social-icon fa fa-youtube"></i></a>
-          <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="social-icon fa fa-instagram"></i></a>
-          <a class="social-icon" target="_blank" href="http://github.com/sinfo"><i class="social-icon fa fa-github"></i></a>
+          <div class="all-33 medium-100 small-100">
+            <a class="transparent-button" href="#joinus" style="padding: 1em 1.5em 1em 1.5em;">We are recruiting!!</a>
+          </div>
+          <div class="all-33 medium-50 small-100">
+            <a class="transparent-button" href="/22" style="padding: 1em 1.5em 1em 1.5em;">Go to SINFO 22</a>
+          </div>
+          <div class="all-33 medium-50 small-100">
+            <a class="transparent-button" href="//app.sinfo.org/me/edit" style="padding: 1em 1.5em 1em 1.5em;">Submit your CV</a>
+          </div>
+          <div class="all-100">
+            <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="social-icon fa fa-facebook"></i></a>
+            <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="social-icon fa fa-twitter"></i></a>
+            <a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="social-icon fa fa-youtube"></i></a>
+            <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="social-icon fa fa-instagram"></i></a>
+            <a class="social-icon" target="_blank" href="http://github.com/sinfo"><i class="social-icon fa fa-github"></i></a>
+          </div>
         </div>
       </div>
     </div>
