fixing mobile menu

--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
           <li><a href="#meetus">Meet us!</a></li>
-          <li><a href="#joinus">Join us!</a></li>
-          <li><a href="code.html">Code of Conduct</a></li>
+          <li><a class="hide-medium" href="#joinus">Join us!</a></li>
+          <li><a class="hide-medium" href="code.html">Code of Conduct</a></li>
         </ul>
       </nav>
 
-      <nav class="ink-navigation ink-grid hide-all show-small">
+      <nav class="ink-navigation ink-grid hide-all show-small show-tiny">
         <ul class="menu vertical flat black">
           <li class="title">
             <a class="logoPlaceholder push-left" href="#" title="SINFO"><img src="img/logo.png"></a>
-              <button class="toggle" data-target="#topbar_menu"><span class="fa fa-reorder"></span></button>
+            <button class="toggle" data-target="#topbar_menu"><span class="fa fa-bars"></span></button>
           </li>
         </ul>
 
@@ -96,13 +96,13 @@
         <h1><a href="#" title=""><img src="img/logo.png"></a></h1>
         <div class="description column-group">
           SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.
-          <div class="all-33 medium-100 small-100">
+          <div class="all-33 medium-100 small-100 tiny-100">
             <a class="transparent-button" href="#joinus" style="padding: 1em 1.5em 1em 1.5em;">We are recruiting!!</a>
           </div>
-          <div class="all-33 medium-50 small-100">
+          <div class="all-33 medium-50 small-100 tiny-100">
             <a class="transparent-button" href="//app.sinfo.org" style="padding: 1em 1.5em 1em 1.5em;">Go to SINFO 22</a>
           </div>
-          <div class="all-33 medium-50 small-100">
+          <div class="all-33 medium-50 small-100 tiny-100">
             <a class="transparent-button" href="//app.sinfo.org/me/edit" style="padding: 1em 1.5em 1em 1.5em;">Submit your CV</a>
           </div>
           <div class="all-100">
