correct minor details

--- a/sponsor.html
+++ b/sponsor.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>
-			SINFO
+			SINFO Sponsorship
 		</title>
 		<meta name="description" content="SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.">
 		<meta name="author" content="SINFO">
@@ -111,7 +111,7 @@
 			<div id="description" class="column-group gutters">
 				<div class="all-100">
 					<h2>Description</h2>
-					<p>In case you are not familiar with us, this year's edition will take place from 22 to 26 February 2016 and we invite you to visit our <a href="http://www.sinfo.org/">homepage</a> presenting the several elements of our event. You can also visit the <a href="http://app.sinfo.org/">SINFO 22 website</a>, the 2015 edition.</p>
+					<p>In case you are not familiar with us, this year's edition will take place from 22 to 26 February 2016 and we invite you to visit our <a href="http://www.sinfo.org/" target="_blank" >homepage</a> presenting the several elements of our event. You can also visit the <a href="http://app.sinfo.org/" target="_blank">SINFO 22 website</a>, the 2015 edition.</p>
 				</div>
 			</div>
 			<div id="reasons" class="column-group gutters">
