Updated description and added promo video

--- a/sponsor.html
+++ b/sponsor.html
@@ -111,7 +111,10 @@
 			<div id="description" class="column-group gutters">
 				<div class="all-100">
 					<h2>Description</h2>
-					<p>In case you are not familiar with us, this year's edition will take place from 22 to 26 February 2016 and we invite you to visit our <a href="http://www.sinfo.org/" target="_blank" >homepage</a> presenting the several elements of our event. You can also visit the <a href="http://app.sinfo.org/" target="_blank">SINFO 22 website</a>, the 2015 edition.</p>
+					<p>Last year we continued with the improvement of our tent. Once again, all the different spaces and sections were joined in a huge tent in the middle of the campus and we felt like the disposition we arranged was better than the one in the previous edition. We had a record breaking attendance of participants - achievement we hope to repeat next year, from the 26th of February to the 2nd of March 2018. We invite you to visit our homepage presenting the several elements of our event. You can also visit the <a href="http://www.sinfo.org/" target="_blank" >SINFO website</a>, the 2017 edition, or see the video of last edition bellow.<p>
+					<div class="promo-video">
+						<iframe width="640" height="360" src="https://www.youtube.com/embed/_EW6y0F3x-g?rel=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+					</div>
 				</div>
 			</div>
 			<div id="reasons" class="column-group gutters">
