--- a/sponsor.html
+++ b/sponsor.html
@@ -131,7 +131,7 @@
       <div id="curricula" class="column-group gutters">
         <div class="all-100">
           <h2>Curricula</h2>
-          <p>Every sponsor that acquires a sponsoring pack will be granted one (1)  access to SINFO’s CV database, with CVs from students collected not only during the event but as of this year they are collected, updated and processed throughout the year.</p>
+          <p>Every sponsor that acquires a sponsoring pack will be granted a link to download CVs from students collected not only during the event but also some time before and after the event.</p>
         </div>
       </div>
 
@@ -160,7 +160,7 @@
 						            <tr class="description"><td colspan="5" class="noPadding">
 						            	<div class="shadow">
 							            	<h3>Curricula</h3>
-											<p>Every sponsor that acquires a sponsoring pack will be granted one (1)  access to SINFO’s CV database, with CVs from students collected not only during the event but as of this year they are collected, updated and processed throughout the year.</p>
+											<p>Every sponsor that acquires a sponsoring pack will be granted a link to download CVs from students collected not only during the event but also some time before and after the event.</p>
 										</div>
 						            </td></tr>
 								</tr>
