Removed presentation option

--- a/sponsor.html
+++ b/sponsor.html
@@ -165,7 +165,7 @@
 						            </td></tr>
 								</tr>
 								<tr class="item alternate">
-									<td class="firstTd"><div class="toggle">+</div>Stand</td><td>5 days</td><td>3 days</td><td>2 days</td><td>2 days*</td>
+									<td class="firstTd"><div class="toggle">+</div>Stand</td><td>5 days</td><td>3 days</td><td>2 days</td><td>2 days</td>
 												<tr class="description"><td colspan="5" class="noPadding">
 													<div class="shadow">
 														<h3>Stand</h3>
@@ -194,7 +194,7 @@
 												</td></tr>
 								</tr>
                   <tr class="item">
-                    <td class="firstTd"><div class="toggle">+</div>Presentation</td><td>√</td><td>√</td><td>√</td><td>√*</td>
+                    <td class="firstTd"><div class="toggle">+</div>Presentation</td><td>√</td><td>√</td><td>√</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>Presentation</h3>
@@ -266,9 +266,6 @@
 									</tr>
                   <tr class="discount">
                     <td class="firstTd">Saving</td><td>- 4.875€</td><td>- 2.075€</td><td>- 950€</td><td>- 25€</td>
-                  </tr>
-                  <tr class="choose">
-                     <td class="firstTd" colspan="5">* Choose just one: either a presentation or 2 days of stand.</td>
                   </tr>
                   <tr class="choose">
                      <td class="firstTd"><b>To the aforementioned values will be added the current VAT rates.</b></td>
