Updated custom activity description

--- a/sponsor.html
+++ b/sponsor.html
@@ -242,7 +242,7 @@
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>Custom Activity</h3>
-                        <p>You can suggest or work alongside us to design a custom activity for your company, which will take place during the event, aiming to arouse the curiosity and interest of our students. All custom activities must be approved by SINFO's team to ensure their feasibility.</p>
+                        <p>This custom activity can be a workshop, for example, or you can also suggest and work alongside us to design a custom activity for your company. All custom activities must be approved by SINFO's team to ensure their feasibility.</p>
                       </div>
                    </td></tr>
                   </tr>
@@ -845,7 +845,7 @@
 											<tr class="description"><td class="noPadding">
 															<div class="shadow">
 																<h3>Custom Activity</h3>
-													<p>You can suggest or work alongside us to design a custom activity for your company, which will take place during the event, aiming to arouse the curiosity and interest of our students. All custom activities must be approved by SINFO's team to ensure their feasibility.</p>
+													<p>This custom activity can be a workshop, for example, or you can also suggest and work alongside us to design a custom activity for your company. All custom activities must be approved by SINFO's team to ensure their feasibility.</p>
 												</div>
 										 </td></tr>
 										</tr>
