Added 'daily free-parking' perk

--- a/sponsor.html
+++ b/sponsor.html
@@ -273,6 +273,7 @@
 									<tr class="perksDescription">
 										<td class="firstTd" colspan="5">
                       <ul>
+                      	<li><b>Daily free-parking</b> - The company will have a paid full-day parking for one vehicle.</li>
 		  								  <li><b>Lunch discount</b> - The Company members present during the event will have the possibility to have lunch for a very low price;</li>
 	   										<li><b>Parking during the presentations</b> - The Company will have clearance to park one (1) car inside the Instituto Superior Técnico's parking lot for the duration of the presentation;</li>
   											<li><b>Parking during assembly and dismantling of the stands</b> - The Company will have clearance to park one (1) car inside the Instituto Superior Técnico’s parking lot during the assembly and dismantling of the stands;</li>
