Changed 'keynote sponsorship' package items

--- a/sponsor.html
+++ b/sponsor.html
@@ -247,7 +247,7 @@
                    </td></tr>
                   </tr>
                   <tr class="item">
-                    <td class="firstTd"><div class="toggle">+</div>Keynote Sponsorship</td><td>2</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
+                    <td class="firstTd"><div class="toggle">+</div>Keynote Sponsorship</td><td>√</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>Keynote Sponsorship</h3>
