Removed tray mats and added sponsors posters div

--- a/sponsor.html
+++ b/sponsor.html
@@ -388,14 +388,11 @@
 		            </td></tr>
 				</tr>
 				<tr class="item">
-					<td class="firstTd"><div class="toggle">+</div>Logo on tray mats</td><td>L</td><td>M</td><td>S</td><td class="notIncluded">x</td>
+					<td class="firstTd"><div class="toggle">+</div>Logo on the Sponsor's Poster</td><td>L</td><td>M</td><td>S</td><td class="notIncluded">x</td>
 								<tr class="description"><td colspan="5" class="noPadding">
 									<div class="shadow">
-										<h3>Logo on tray mats</h3>
-							<p>The Company logo will be on the more than 10.000 tray mats distributed in the weeks prior to SINFO's throughout bars and cafeterias from Universities in the Lisbon Area.</p>
-							<div class="all-50 medium-60 small-100 tiny-100 push-center">
-									<img src="img/sponsors/individual.JPG">
-							</div>
+										<h3>Logo on the Sponsor's Poster</h3>
+							<p>The Company logo will be present on our Sponsor's Poster placed at the Tent</p>
 						</div>
 								</td></tr>
 				</tr>
@@ -696,14 +693,11 @@
 																</td></tr>
 												</tr>
 												<tr class="item alternate">
-													<td class="firstTd"><div class="toggle">+</div>Logo on tray mats</td>
+													<td class="firstTd"><div class="toggle">+</div>Logo on the Sponsor's Poster</td>
 																<tr class="description"><td class="noPadding">
 																	<div class="shadow">
-																		<h3>Logo on tray mats</h3>
-															<p>The Company logo will be on the more than 40.000 tray mats distributed in the weeks prior to SINFO's throughout bars and cafeterias from Universities in the Lisbon Area.</p>
-															<div class="all-50 medium-60 small-100 tiny-100 push-center">
-																	<img src="img/sponsors/individual.JPG">
-															</div>
+																		<h3>Logo on the Sponsor's Poster</h3>
+															<p>The Company logo will be present on our Sponsor's Poster placed at the Tent</p>
 														</div>
 																</td></tr>
 												</tr>
