--- a/sponsor.html
+++ b/sponsor.html
@@ -388,7 +388,7 @@
 		            </td></tr>
 				</tr>
 				<tr class="item">
-					<td class="firstTd"><div class="toggle">+</div>Logo on the Sponsor's Poster</td><td>L</td><td>M</td><td>S</td><td class="notIncluded">x</td>
+					<td class="firstTd"><div class="toggle">+</div>Logo on the Sponsor's Poster</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
 								<tr class="description"><td colspan="5" class="noPadding">
 									<div class="shadow">
 										<h3>Logo on the Sponsor's Poster</h3>
