--- a/sponsor.html
+++ b/sponsor.html
@@ -121,7 +121,7 @@
 				<div class="all-100">
 					<h2>Reasons to become a Partner</h2>
             <ul>
-              <li>Do you want to recruit the best of the best from Portuguese universities? Are the more than 4000 participants, interested in Full Time, Part-time and internships jobs, music to your ears?</li>
+              <li>Do you want to recruit the best of the best from Portuguese universities? Are the more than 5000 participants, interested in Full Time, Part-time and internships jobs, music to your ears?</li>
               <li>Do you want to promote, advertise and make your company known to future potential employees?</li>
               <li>Do your want to network and form interesting business partnerships and connections?</li>
             </ul>
@@ -900,11 +900,11 @@
 		  </div>
 		  <nav class="ink-navigation push-right medium-150 small-100 tiny-100 small-push-right">
 			  <ul class="menu horizontal">
-				<a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="social-icon fa fa-facebook"></i></a>
-				<a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="social-icon fa fa-twitter"></i></a>
-				<a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="social-icon fa fa-youtube"></i></a>
-				<a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="social-icon fa fa-instagram"></i></a>
-				<a class="social-icon" target="_blank" href="http://github.com/sinfo"><i class="social-icon fa fa-github"></i></a>
+				<a class="social-icon" target="_blank" href="https://fb.com/sinfoist"><i class="social-icon fa fa-facebook"></i></a>
+				<a class="social-icon" target="_blank" href="https://twitter.com/sinfoist"><i class="social-icon fa fa-twitter"></i></a>
+				<a class="social-icon" target="_blank" href="https://youtube.com/sinfoist"><i class="social-icon fa fa-youtube"></i></a>
+				<a class="social-icon" target="_blank" href="https://instagram.com/sinfoist"><i class="social-icon fa fa-instagram"></i></a>
+				<a class="social-icon" target="_blank" href="https://github.com/sinfo"><i class="social-icon fa fa-github"></i></a>
 				<a class="social-icon" target="_blank" href="mailto:geral@sinfo.org"><i class="social-icon fa fa-envelope"></i></a>
 			  </ul>
 		  </nav>
